# automated-customer-acquisition

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.yaml  docker-compose.example.yml  pyproject.toml
deployment/: Caddyfile.example  Caddyfile.production  docker-compose.ci.yml  docker-compose.external-db.yml  docker-compose.production.yml  env.global-vertu.example  production.env.example  sender_pool.30.example.yaml
docs/: CENTRALIZED_OUTBOUND_IDENTITY.md  CI_CD.md  COMPANY_SEED_IMPORT.md  DB_CONNECTION_TROUBLESHOOTING.md  DB_MIGRATION_016_RESEND_EVENTS.md  DEPLOYMENT.md  FRONTEND_MIGRATION.md  GLOBAL_VERTU_DOMAIN_ROLLOUT.md  INBOUND_REPLY_BRIDGE.md  LINKEDIN_CONTACT_ENRICHMENT_EXTERNAL.md  LINKEDIN_CONTACT_ENRICHMENT_GUIDE.md  MCP_INTEGRATION.md  ODOO_VPS_SSO_SETUP.md  OPS_DEPLOY_CURRENT_UPDATE.md  OPS_HANDOFF.md  PDCA_CLOSED_LOOP_ROADMAP.md  PRODUCTION_UPDATE_2026-07-12.md  PRODUCTION_UPDATE_RUNBOOK_2026_07_07.md  RESEND_FEEDBACK_LOOP.md  RUSSIA_HIRING_SIGNALS.md  SMTP_TRANSPORT_SETUP.md  SOUTHEAST_ASIA_HIRING_SIGNALS.md  SYSTEM_DESIGN_OVERVIEW.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
migrations/: 001_init.sql  002_webhook_dedup.sql  003_contact_source_person_id.sql  004_social_profiles.sql  005_lifecycle_management.sql  006_profile_insights.sql  007_lifecycle_activities.sql  008_users_and_quotas.sql  009_email_discovery_metadata.sql  010_sender_pool_and_global_quota.sql  011_30_user_production_ops.sql  012_linkedin_public_search.sql  018_customer_pool.sql  (+16 more)
(+278 files in other folders)
